    from pre-Wheezy versions.
  * debian/debhelper.in/libc.preinst: don't act on the filesystem until it
    is sure that the libc is going to be upgraded.
  * debian/debhelper.in/libc.preinst: stop checking for /etc/init.d/glibc.sh
    on upgrade, we don't support lenny to jessie upgrades.
  * debhelper.in/libc-alt.preinst: drop, we don't support lenny to jessie
    upgrades.

  [ Samuel Thibault ]
  * Hurd fixes for new upstream
    - debian/patches/hurd-i386/libpthread_version.diff: Rebased.
    - debian/patches/hurd-i386/submitted-net.diff: Rebased.
    - debian/patches/hurd-i386/tg-elfosabi_gnu.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-pthread-atfork.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
    - debian/patches/hurd-i386/tg-tls.diff: Rebased.
    - debian/patches/hurd-i386/unsubmitted-gnumach.defs.diff: Rebased.
    - update testsuite hurd-i386 results.

  [ Petr Salinger ]
  * kfreebsd/local-nscd-nosendfile-fix.diff: remove, fixed upstream.
  * kfreebsd/local-no-execfn.diff: new patch, 
      to handle systems without AT_EXECFN
  * kfreebsd/local-sysdeps.diff: update to revision 5466 (from glibc-bsd).
  * kfreebsd/local-fbtl.diff: likewise.
  * update testsuite-checking/expected-results-*-kfreebsd-gnu-*

 -- Adam Conrad <adconrad@0c3.net>  Sun, 09 Feb 2014 09:46:13 -0700

eglibc (2.18-6) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread_guardsize.diff: Fix guardsize semantic
    for gcc's -fsplit-stack.

  [ Aurelien Jarno ]
  * patches/any/cvs-make-4.0.diff: patch from upstream to allow GNU Make
    4.0 and greater.  Closes: #747013.
  * patches/sparc/cvs-strcmp.diff: patch from upstream to fix a corner case
    in the sparc specific strcmp() implementation.  Closes: #746310.
  * debhelper.in/nscd.init: invalidate nscd cache on startup.  Closes:
    #689427.
  * patches/any/cvs-wprintf.diff: patch from upstream to correctly handle