@@ -66,6 +66,7 @@ eglibc (2.19-0experimental0) UNRELEASED; urgency=medium
     on upgrade, we don't support lenny to jessie upgrades.
   * debhelper.in/libc-alt.preinst: drop, we don't support lenny to jessie
     upgrades.
+  * sysdeps/{amd64.mk,i386.mk,x32.mk}: enable lock elision.
 
   [ Samuel Thibault ]
   * Hurd fixes for new upstream
